add APIs for retrieving the active and the list of completed task for logged-in user
